<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_weight="50"
            android:gravity="center_horizontal"
            android:text="@string/player"
            android:textColor="#03A9F4"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center_horizontal"
            android:text="@string/banker"
            android:textColor="#E2857F"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <EditText
            android:id="@+id/player01"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:singleLine="true"
            android:nextFocusDown="@+id/player02"
            android:maxLength="1"
            android:gravity="center_horizontal"
            android:hint="@string/player_1st"
            android:inputType="number"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/player02"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:singleLine="true"
            android:nextFocusDown="@+id/banker01"
            android:maxLength="1"
            android:gravity="center_horizontal"
            android:hint="@string/player_2nd"
            android:inputType="number"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/player03"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:singleLine="true"
            android:nextFocusDown="@+id/banker03"
            android:maxLength="1"
            android:gravity="center_horizontal"
            android:hint="@string/player_3rd"
            android:inputType="number"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <EditText
            android:id="@+id/banker01"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:singleLine="true"
            android:nextFocusDown="@+id/banker02"
            android:maxLength="1"
            android:gravity="center_horizontal"
            android:hint="@string/banker_1st"
            android:inputType="number"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/banker02"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:singleLine="true"
            android:nextFocusDown="@+id/player03"
            android:maxLength="1"
            android:gravity="center_horizontal"
            android:hint="@string/banker_2nd"
            android:inputType="number"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/banker03"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:singleLine="true"
            android:nextFocusDown="@+id/result"
            android:maxLength="1"
            android:gravity="center_horizontal"
            android:hint="@string/banker_3rd"
            android:inputType="number"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/howtouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="#00BCD4"
            android:text="@string/how_to_use" />

        <Button
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="#FFC107"
            android:text="@string/maybe_next" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="474dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/i_hope_you_a_win"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>